# mcp_example

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  MCP_Requirements.md  README.md  docker-compose.yml  pyproject.toml  test_e2e_openrouter.py
src/apis/: main.py
src/libs/: openrouter.py  prompt.py
src/utils/: config.py  helpers.py
